[package]
name = "VlsiFloorplantRL"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
strum_macros = "0.26.4"
strum = "0.26.3"
pyo3 = "0.22.5"

[lib]
name = "vlsi_floorplant"
crate-type = ["cdylib"]

